--- a/style_main.css
+++ b/style_main.css
@@ -115,18 +115,18 @@ li{
   position: absolute;
   width: 200px;
   height: 100px;
-  background: #0052D4;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #6FB1FC, #4364F7, #0052D4);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #6FB1FC, #4364F7, #0052D4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #833ab4;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   border-radius: 75px;
   z-index: -1;
   animation: 0.8s clockwise infinite;
 }
 
 .top_button:hover:after {
-  background: #1FA2FF;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #A6FFCB, #12D8FA, #1FA2FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #FF8008;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #FFC837, #FF8008);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #FFC837, #FF8008); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   animation: 2s counterclockwise infinite;
 }
 
@@ -224,8 +224,10 @@ li{
 	background-color: red;
 	border-radius: 50%;
 	display:inline-block;
-	animation:5s animbub both;
-	animation-iteration-count: 1;
+	animation-name: animbub,alivebub;
+	animation-duration: 5s,5s;
+	animation-delay: 0s,5s;
+	animation-iteration-count: 1, infinite;
 	-webkit-filter:blur(10px);
 }
 
@@ -245,9 +247,13 @@ li{
 		top:-5%;
 		left:-10%;
 	}
+	50%{
+		top:-6%;
+		left:-11%;
+	}
 	100%{
-		top:-10%;
-		left:-20%;
+		top:-5%;
+		left:-10%;
 	}
 }
 	/*End Bubble 1*/
@@ -266,7 +272,7 @@ li{
 	border-radius: 50%;
 	display:inline-block;
 	animation:5s animbubtwo both;
-	animation-iteration-count: 1;
+	animation-iteration-count: 1, infinite;
 	-webkit-filter:blur(10px);
 }
 @keyframes animbubtwo{
@@ -291,8 +297,10 @@ li{
 	background-color: red;
 	border-radius: 50%;
 	display:inline-block;
-	animation:5s animbubthree both;
-	animation-iteration-count: 1;
+	animation-name: animbubthree, alivebubthree;
+	animation-duration:5s,10s;
+	animation-delay:0s,5s;
+	animation-iteration-count:1, infinite;
 	-webkit-filter:blur(0px);
 }	
 
@@ -301,11 +309,26 @@ li{
 		top:-20%;
 		right:10%;
 	}
+
 	100%{
 		top:20%;
 		right:10%;
 	}
 }	
+@keyframes alivebubthree{
+	0%{
+		top:20%;
+		right:10%;
+	}
+	50%{
+		top:9%;
+		right:10%;
+	}
+	100%{
+		top:20%;
+		right:10%;
+	}
+}
 	/* End Bubble 3 */
 
 	/* Bubble 4 */
@@ -320,8 +343,10 @@ li{
 	background-color: red;
 	border-radius: 50%;
 	display:inline-block;
-	animation:5s animbubfour both;
-	animation-iteration-count: 1;
+	animation-name: animbubfour,alivebubfour;
+	animation-duration: 5s,8s;
+	animation-delay: 0s,5s;
+	animation-iteration-count: 1,infinite;
 	-webkit-filter:blur(50px);
 }
 @keyframes animbubfour{
@@ -334,6 +359,21 @@ li{
 		left:-20%;
 	}
 }
+@keyframes alivebubfour{
+	0%{
+		bottom:-60%;
+		left:-20%;
+	}
+	50%{
+		bottom:-60%;
+		left:-30%;
+	}
+	100%{
+		bottom:-60%;
+		left:-20%;
+	}
+}
 	/* End Bubble 4 */
+
 
 /* End Bubble effect */
