--- a/style_main.css
+++ b/style_main.css
@@ -466,6 +466,10 @@ li{
 	width: 100%;
 	height: 930px;
 	border-radius: 150px;
+	-webkit-box-shadow: 14px 10px 55px 21px rgba(0,0,0,0.48);
+	-moz-box-shadow: 14px 10px 55px 21px rgba(0,0,0,0.48);
+	box-shadow: 14px 10px 55px 21px rgba(0,0,0,0.48);
+	
 	-webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
